# sitebookify

./: .dockerignore  .envrc  .gitignore  .gtrconfig  .textlintrc.json  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  build.rs  draft.md  exec-plan.md  flake.nix  justfile  llmdesign.md  plan.md  prh.yml  protocol.md  recipe-spec-protocol-doc-proto.yaml  spec.md
.github/workflows/: ci.yml  deploy-cloudrun.yml  image-gcp.yml
docs/: .vale.ini  docs.json  index.mdx
docs/cli/: overview.mdx
docs/formats/: extracted.mdx  manifest.mdx  raw.mdx  toc.mdx
docs/protobuf/: buf-and-ci.mdx  overview.mdx  resource-oriented.mdx  validation.mdx
infra/: README.md
infra/terraform/cloudrun-public-gcs/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
plans/: 2026-01-26_book-bundle-translate-export.md  2026-01-27_llm-rewrite-pages.md  2026-01-31_docker-ci-gcp-push.md  2026-02-01_cloudrun-public-gcs-1h.md  2026-02-02_web-markdown-mermaid.md  2026-02-04_db-less-vending-ux.md  2026-02-12_cloud-run-observability-sample-run-sitebookify.md  2026-02-12_cloud-run-observability-skill-design.md  2026-02-12_cloudrun-worker-separation.md
proto/sitebookify/v1/: manifest.proto  service.proto  toc.proto
proto/template/v1/: greetings.proto
src/: book.rs  build.rs  cli.rs  codex.rs  crawl.rs  epub.rs  export.rs  extract.rs  formats.rs  google.rs  greeting.rs  grpc.rs  lib.rs  llm.rs  llm_crawl.rs  logging.rs  main.rs  manifest.rs  openai.rs  raw_store.rs  rewrite.rs  toc.rs
src/app/: artifact_store.rs  dispatcher.rs  job_store.rs  mod.rs  model.rs  preview.rs  queue.rs  runner.rs
tests/: cli_hello.rs  llm_allow_missing_tokens.rs  rewrite_heading_split.rs  rewrite_token_fallback.rs  rewrite_token_wrapping.rs  sitebookify_pipeline.rs
tests/openai_stub/: mod.rs
web/: index.html  package-lock.json  package.json  rust-lib-src  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  MarkdownPreview.tsx  style.css
web/src/lib/: jobHistory.ts  router.ts
web/src/pages/: Home.tsx  Job.tsx
workspace/: manifest.jsonl  toc.yaml
workspace/book/: book.toml
workspace/book/src/: SUMMARY.md
workspace/extracted/pages/: p_005158aed39bdd1ed23fece000cc19628356ebd9c4bd7e690ef12b478ad1f16a.md  p_0c54ecc39f18eade91eda492183ecdbe7a60daab92049a45c798481d4df6d620.md  p_15eaf9ac401762e627c89a86f34037118a3f8ec5d753511a26f94d0ec48b8fa1.md  p_1e7b080d1296ca9b6a84e21374c4f4aab9d3ce1027bfdec65a2bd66e24f3879e.md  p_313c54f7d5a0bd8b3e922b18ba31dd98debbeb9c8b7c2dd500e98ea976bdf070.md  p_3deac82334f2dabcdbe6ed86c2425d2cd5f8f7d4eb71305ef5b86a851b765413.md  p_443d2af9725401a205b50c642fc3588107ace9fd4b203d5ea58f0b6a5a9b3bb0.md  p_779b81d8b86c5734e7edb5a1fddfeead6144c8051b725239573f1685b3ba8781.md  (+3 more)
workspace/raw/: crawl.jsonl
(+3 files in other folders)
