[package]
name = "sitebookify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
html2md = "0.2.14"
readability-js = "0.1.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
spider = { version = "2.39.21", default-features = false, features = ["sync", "regex"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
tiny_http = "0.12.0"
