[package]
name = "sitebookify"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = "0.7.9"
clap = { version = "4.5.27", features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
html2md = "0.2.14"
prost = "0.13.5"
prost-types = "0.13.5"
readability-js = "0.1.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
spider = { version = "2.39.21", default-features = false, features = ["sync", "regex"] }
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.13", features = ["io"] }
http-body-util = "0.1.2"
tonic = { version = "0.12.3", features = ["transport"] }
tonic-web = "0.12.3"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.12.1", features = ["v4"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tiny_http = "0.12.0"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["cleanup-markdown"] }
prost = "0.13.5"
